--- a/TP2/css/util/carousel.css
+++ b/TP2/css/util/carousel.css
@@ -109,91 +109,3 @@
         background-color: var(--accent);
     }
 }
-
-
-
-
-/*
-
-.carousel-container {
-    display: flex;
-    overflow: auto;
-    width: 100%;
-    max-width: 840px;
-    margin: 0 auto;
-}
-
-
-
-.carousel {
-    margin-left: 10px;
-    display: flex;
-    transition: transform 0.3s ease;
-}
-
-.carousel-button {
-    display: none;
-}
-
-@media screen and (min-width: 1024px) {
-    .carousel-container {
-        display: flex;
-        overflow: hidden;
-        width: 100%;
-        max-width: 840px;
-        margin: 0 auto;
-        background-color: #E1E1E1;
-        border: none;
-        cursor: pointer;
-    }
-
-    .carousel-button {
-        display: block;
-        background-color: #E1E1E1;
-        border: none;
-        cursor: pointer;
-    }
-}
-
-.carousel-container {
-    display: flex;
-    overflow: auto;
-    width: 100%;
-    max-width: 840px;
-    margin: 0 auto;
-}
-
-.carrousel-title {
-    margin-top: 30px;
-    color: #1C1E26;
-}
-
-.carousel {
-    margin-left: 10px;
-    display: flex;
-    transition: transform 0.3s ease;
-}
-
-.carousel-button {
-    display: none;
-}
-
-@media screen and (min-width: 1024px) {
-    .carousel-container {
-        display: flex;
-        overflow: hidden;
-        width: 100%;
-        max-width: 840px;
-        margin: 0 auto;
-        background-color: #E1E1E1;
-        border: none;
-        cursor: pointer;
-    }
-
-    .carousel-button {
-        display: block;
-        background-color: #E1E1E1;
-        border: none;
-        cursor: pointer;
-    }
-}
